--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,19 @@
     section {
         padding: 2rem;
     }
+
+.box {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+
+    /* .box {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        position: absolute;
+    } */
     /* .animation-wrapper{
 box-sizing: border-box;
     border: 1px white solid;
