changes to layout and graph queries

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,9 +12,9 @@
     html {
         @apply scroll-smooth;
     }
-    section {
+    /* section {
         padding: 2rem;
-    }
+    } */
 
 .box {
     width: 150px;
