--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,8 @@
 
     html {
         @apply scroll-smooth;
+        @apply scroll-pt-12;
+        font-family: Arial, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
     }
     /* section {
         padding: 2rem;
